--- a/Cafeine/Cafeine.csproj
+++ b/Cafeine/Cafeine.csproj
@@ -187,7 +187,7 @@
     <Compile Include="Views\Searchpage.xaml.cs">
       <DependentUpon>Searchpage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\View_Resouces\DIrectoryTemplate - Copy.cs">
+    <Compile Include="Views\View_Resouces\HomePageTemplate.cs">
       <DependentUpon>HomePageTemplate.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\View_Resouces\DirectoryTemplate.cs">
