--- a/Cafeine/project.json
+++ b/Cafeine/project.json
@@ -1,7 +1,7 @@
 ﻿{
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.3",
-    "MvvmLight": "5.3.0"
+    "Microsoft.Toolkit.Uwp.UI.Animations": "1.5.0"
   },
   "frameworks": {
     "uap10.0": {}
