--- a/Cafeine/Cafeine/Cafeine.csproj
+++ b/Cafeine/Cafeine/Cafeine.csproj
@@ -17,7 +17,7 @@
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WindowsXamlEnableOverview>true</WindowsXamlEnableOverview>
-    <PackageCertificateKeyFile>Cafeine2_StoreKey.pfx</PackageCertificateKeyFile>
+    <PackageCertificateKeyFile>Cafeine_StoreKey.pfx</PackageCertificateKeyFile>
     <PackageCertificateThumbprint>611D057CF6E018B752BF5F3AE1B895B4E5F8202E</PackageCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
@@ -91,7 +91,7 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
-    <None Include="Cafeine2_StoreKey.pfx" />
+    <None Include="Cafeine_StoreKey.pfx" />
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
