--- a/Cafeine/Cafeine/Cafeine.csproj
+++ b/Cafeine/Cafeine/Cafeine.csproj
@@ -108,6 +108,13 @@
     <Compile Include="Model\ValueConverter.cs" />
     <Compile Include="ViewModel\DirectoryExplorerViewModel.cs" />
     <Compile Include="ViewModel\HomeViewModel.cs" />
+    <Compile Include="ViewModel\LocalDirectorySetupViewModel.cs" />
+    <Compile Include="View\LocalDirectorySetup.xaml.cs">
+      <DependentUpon>LocalDirectorySetup.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\SettingsPage.xaml.cs">
+      <DependentUpon>SettingsPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\View_Resource\DirectoryTemplate.cs">
       <DependentUpon>DIrectoryTemplate.xaml</DependentUpon>
     </Compile>
@@ -131,9 +138,6 @@
     <Compile Include="Model\IDataService.cs" />
     <Compile Include="Model\ItemProperties.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="View\SecondPage.xaml.cs">
-      <DependentUpon>SecondPage.xaml</DependentUpon>
-    </Compile>
     <Compile Include="View\SignInDialog.xaml.cs">
       <DependentUpon>SignInDialog.xaml</DependentUpon>
     </Compile>
@@ -205,6 +209,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="View\LocalDirectorySetup.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="View\LoginPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -213,9 +221,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="View\SecondPage.xaml">
-      <SubType>Designer</SubType>
+    <Page Include="View\SettingsPage.xaml">
       <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="View\SignInDialog.xaml">
       <SubType>Designer</SubType>
