--- a/Cafeine/Cafeine/Cafeine.csproj
+++ b/Cafeine/Cafeine/Cafeine.csproj
@@ -91,6 +91,27 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
+    <Content Include="Assets\Fonts\Cuprum-Bold.ttf" />
+    <Content Include="Assets\Fonts\Montserrat\OFL.txt" />
+    <Content Include="Assets\Fonts\ufonts.com_agrevuecyr-medium.ttf" />
+    <Content Include="Assets\Fonts\Montserrat\Montserrat-Black.ttf" />
+    <Content Include="Assets\Fonts\Montserrat\Montserrat-BlackItalic.ttf" />
+    <Content Include="Assets\Fonts\Montserrat\Montserrat-Bold.ttf" />
+    <Content Include="Assets\Fonts\Montserrat\Montserrat-BoldItalic.ttf" />
+    <Content Include="Assets\Fonts\Montserrat\Montserrat-ExtraBold.ttf" />
+    <Content Include="Assets\Fonts\Montserrat\Montserrat-ExtraBoldItalic.ttf" />
+    <Content Include="Assets\Fonts\Montserrat\Montserrat-ExtraLight.ttf" />
+    <Content Include="Assets\Fonts\Montserrat\Montserrat-ExtraLightItalic.ttf" />
+    <Content Include="Assets\Fonts\Montserrat\Montserrat-Italic.ttf" />
+    <Content Include="Assets\Fonts\Montserrat\Montserrat-Light.ttf" />
+    <Content Include="Assets\Fonts\Montserrat\Montserrat-LightItalic.ttf" />
+    <Content Include="Assets\Fonts\Montserrat\Montserrat-Medium.ttf" />
+    <Content Include="Assets\Fonts\Montserrat\Montserrat-MediumItalic.ttf" />
+    <Content Include="Assets\Fonts\Montserrat\Montserrat-Regular.ttf" />
+    <Content Include="Assets\Fonts\Montserrat\Montserrat-SemiBold.ttf" />
+    <Content Include="Assets\Fonts\Montserrat\Montserrat-SemiBoldItalic.ttf" />
+    <Content Include="Assets\Fonts\Montserrat\Montserrat-Thin.ttf" />
+    <Content Include="Assets\Fonts\Montserrat\Montserrat-ThinItalic.ttf" />
     <None Include="Cafeine_StoreKey.pfx" />
     <None Include="project.json" />
   </ItemGroup>
@@ -100,7 +121,6 @@
     </Compile>
     <Compile Include="Design\CollectionLibraryProvider.cs" />
     <Compile Include="Design\DataControl.cs" />
-    <Compile Include="Design\DesignDataService.cs" />
     <Compile Include="Design\Logincredentials.cs" />
     <Compile Include="Design\SearchProvider.cs" />
     <Compile Include="Model\GroupedSearchResult.cs" />
@@ -114,9 +134,6 @@
     <Compile Include="ViewModel\LocalDirectorySetupViewModel.cs" />
     <Compile Include="View\CollectionLibrary.xaml.cs">
       <DependentUpon>CollectionLibrary.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="View\DirectoryExplorerFrame.xaml.cs">
-      <DependentUpon>DirectoryExplorerFrame.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\ExpandItemDetails.xaml.cs">
       <DependentUpon>ExpandItemDetails.xaml</DependentUpon>
@@ -142,19 +159,12 @@
     <Compile Include="View\LoginPage.xaml.cs">
       <DependentUpon>LoginPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\MainPage.xaml.cs">
-      <DependentUpon>MainPage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Model\DataItem.cs" />
-    <Compile Include="Model\DataService.cs" />
-    <Compile Include="Model\IDataService.cs" />
     <Compile Include="Model\ItemProperties.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\SignInDialog.xaml.cs">
       <DependentUpon>SignInDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewModel\LoginViewModel.cs" />
-    <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\SignInDialogViewModel.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
     <Compile Include="View\View_Resource\ItemTemplates.cs">
@@ -224,10 +234,6 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="View\DirectoryExplorerFrame.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="View\ExpandItemDetails.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -241,10 +247,6 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="View\LoginPage.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="View\MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
