Add a visual if there's no item in certain category Add a feature : view item's files Add litecoin address Fix a problem where the app doesn't fill the collection when login for the first time.

--- a/Cafeine/Cafeine/Cafeine.csproj
+++ b/Cafeine/Cafeine/Cafeine.csproj
@@ -12,7 +12,7 @@
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion>10.0.15063.0</TargetPlatformVersion>
-    <TargetPlatformMinVersion>10.0.14393.0</TargetPlatformMinVersion>
+    <TargetPlatformMinVersion>10.0.10586.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -116,6 +116,7 @@
     <Content Include="Assets\Fonts\Montserrat\Montserrat-SemiBoldItalic.ttf" />
     <Content Include="Assets\Fonts\Montserrat\Montserrat-Thin.ttf" />
     <Content Include="Assets\Fonts\Montserrat\Montserrat-ThinItalic.ttf" />
+    <Content Include="Assets\Fonts\Cafeine_font.ttf" />
     <None Include="Cafeine_StoreKey.pfx" />
   </ItemGroup>
   <ItemGroup>
